<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ApaBoleActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="30dp"
        android:paddingEnd="25dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apaBole_0"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="345dp"
                android:layout_column="2"
                android:text="@string/apaBole_1"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="345dp"
                android:layout_column="2"
                android:text="@string/apaBole_2"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="345dp"
                android:layout_column="2"
                android:text="@string/apaBole_3"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp" />

</LinearLayout>